--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon" />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
+<!-- fontawesome icons -->
+<script src="https://kit.fontawesome.com/c61501f624.js" crossorigin="anonymous"></script>
     <title>Futura Labs</title>
-</head>
-<body>
-    <h1>Something is here</h1>
-</body>
+  </head>
+  <body>
+    <header class="navigation">
+      <img src="images/logo.svg" alt="" class="logo" />
+    </header>
+    <section class="homepage">
+      <div class="contents">
+        <div class="texts">
+          <h1>Kerala's No.1 Software Training Institute</h1>
+          <p class="location">Calicut | Kochi</p>
+        </div>
+        <div class="buttons">
+            <p>Enquire Now <i class="fa-solid fa-circle-chevron-right"></i></p>
+            <p>Call Now <i class="fa-solid fa-circle-chevron-right"></i></p>
+        </div>
+
+        <img src="images/banner.png" alt="banner" class="main-img" />
+      </div>
+    </section>
+  </body>
 </html>
