--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
       <div class="contents">
         <div class="texts">
           <h1>Kerala's No.1 <br> Software Training Institute</h1>
-          <p>Best learning platform to transform you into a skilled and trained IT professional</p>
           <p class="location">Calicut | Kochi</p>
           <div class="buttons">
               <p>Enquire Now <i class="fa-solid fa-circle-chevron-right"></i></p>
               <p>Call Now <i class="fa-solid fa-circle-chevron-right"></i></p>
           </div>
         </div>
-
+        <div class="media">
+         <img src="images/plane.svg" alt="paper_plane" class="plane">
         <img src="images/banner.png" alt="banner" class="main-img" />
+        </div>
       </div>
     </section>
   </body>
