final change 01st Feb

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     <title>Futura Labs</title>
   </head>
   <body>
+    <!-- navigation bar -->
     <header class="navigation">
       <img src="images/logo.svg" alt="" class="logo" />
+        <ul>
+          <li>About</li>
+          <li>Courses</li>
+          <li>Placements</li>
+          <li>Careers</li>
+          <li>Coding Club</li>
+          <li class="contactUs">Contact Us</li>
+        </ul>
     </header>
+    <!-- homepage -->
     <section class="homepage">
       <div class="contents">
         <div class="texts">
