--- a/index.html
+++ b/index.html
@@ -43,5 +43,12 @@
         </div>
       </div>
     </section>
+    <section class="courses">
+      <div class="description">
+        <p>Our Courses</p>
+        <h3 class="head">Trainings We Offer</h3>
+
+      </div>
+    </section>
   </body>
 </html>
