--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon" />
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
-<!-- fontawesome icons -->
-<script src="https://kit.fontawesome.com/c61501f624.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Liter&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/c61501f624.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Futura Labs</title>
   </head>
   <body>
     <!-- navigation bar -->
-    <header class="navigation">
+    <!-- <header class="navigation">
       <img src="images/logo.svg" alt="" class="logo" />
         <ul>
           <li>About</li>
@@ -25,21 +31,40 @@
           <li>Coding Club</li>
           <li class="contactUs">Contact Us</li>
         </ul>
+    </header> -->
+    <header class="navigation">
+      <div class="contents">
+        <div class="img">
+          <img src="images/logo.svg" alt="futura-logo" class="logo" />
+        </div>
+        <nav class="list-elements">
+          <ul>
+            <li>About</li>
+            <li>Courses</li>
+            <li>Placements</li>
+            <li>Careers</li>
+            <li class="contactUs">Contact</li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!-- homepage -->
     <section class="homepage">
       <div class="contents">
         <div class="texts">
-          <h1>Kerala's No.1 <br> Software Training Institute</h1>
+          <h1>
+            Kerala's No.1 <br />
+            Software Training Institute
+          </h1>
           <p class="location">Calicut | Kochi</p>
           <div class="buttons">
-              <p>Enquire Now <i class="fa-solid fa-circle-chevron-right"></i></p>
-              <p>Call Now <i class="fa-solid fa-circle-chevron-right"></i></p>
+            <p>Enquire Now <i class="fa-solid fa-circle-chevron-right"></i></p>
+            <p>Call Now <i class="fa-solid fa-circle-chevron-right"></i></p>
           </div>
         </div>
         <div class="media">
-         <img src="images/plane.svg" alt="paper_plane" class="plane">
-        <img src="images/banner.png" alt="banner" class="main-img" />
+          <img src="images/plane.svg" alt="paper_plane" class="plane" />
+          <img src="images/banner.png" alt="banner" class="main-img" />
         </div>
       </div>
     </section>
@@ -47,7 +72,6 @@
       <div class="description">
         <p>Our Courses</p>
         <h3 class="head">Trainings We Offer</h3>
-
       </div>
     </section>
   </body>
