--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
         <div class="img">
           <img src="images/logo.svg" alt="futura-logo" class="logo" />
         </div>
+        <!-- navigation elements -->
         <nav class="list-elements">
           <ul>
             <li>About</li>
             <li>Courses</li>
             <li>Placements</li>
             <li>Careers</li>
-            <li class="contactUs">Contact</li>
+            <li class="contactUs">Contact Us <i class="fa-solid fa-circle-chevron-right"></i></li>
           </ul>
         </nav>
+        <!-- hamburger menu icon on mobile view -->
+        <i class="fa-solid fa-bars" id="hb"></i>
       </div>
     </header>
     <!-- homepage -->
