--- a/index.html
+++ b/index.html
@@ -33,38 +33,42 @@
             <li>Courses</li>
             <li>Placements</li>
             <li>Careers</li>
-            <li class="contactUs">Contact Us <i class="fa-solid fa-circle-chevron-right"></i></li>
+            <li class="contactUs">
+              Contact Us <i class="fa-solid fa-circle-chevron-right"></i>
+            </li>
           </ul>
         </nav>
         <!-- hamburger menu icon on mobile view -->
         <i class="fa-solid fa-bars" id="hb"></i>
       </div>
     </header>
+
     <!-- homepage -->
     <section class="homepage">
-      <div class="contents">
-        <div class="texts">
-          <h1>
-            Kerala's No.1 <br />
-            Software Training Institute
-          </h1>
+      <div class="main-page-content">
+        <div class="head-container">
+          <div class="heading">
+            <h1>
+              Kerala's No.1 <br />
+              Software <br />Training <br />
+              Institute
+            </h1>
+          </div>
           <p class="location">Calicut | Kochi</p>
           <div class="buttons">
-            <p>Enquire Now <i class="fa-solid fa-circle-chevron-right"></i></p>
+            <p>Enquire now <i class="fa-solid fa-circle-chevron-right"></i></p>
             <p>Call Now <i class="fa-solid fa-circle-chevron-right"></i></p>
           </div>
         </div>
-        <div class="media">
-          <img src="images/plane.svg" alt="paper_plane" class="plane" />
-          <img src="images/banner.png" alt="banner" class="main-img" />
+        <div class="image-container">
+          <img src="images/banner.png" alt="main-image" class="main-img" />
         </div>
       </div>
     </section>
-    <section class="courses">
-      <div class="description">
-        <p>Our Courses</p>
-        <h3 class="head">Trainings We Offer</h3>
-      </div>
-    </section>
+
+    <!-- courses section -->
+     <section class="course-container">
+      <h1>Trainings We Offer</h1>
+     </section>
   </body>
 </html>
