--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
 
     <!-- courses section -->
      <section class="course-container">
-      <h1>Trainings We Offer</h1>
+      <div class="content-desc">
+        <p>Our Courses</p>
+      <h2>Trainings We Offer</h2>
+      <p>Explore our carefully curated courses that blend academic excellence with practical skills, preparing you for success in your chosen field. We train you to upgrade your skills and practical knowledge, with the broadly designed syllabus and state-of-the-art facility. Choose among various software training programs we are offering and get the mentorship of industry experts to stand sturdy in the industry.</p>
+      </div>
+      <div class="course-categories">
+        <p>Coding</p>
+        <p>Design</p>
+        <p>Digital Marketing</p>
+      </div>
      </section>
   </body>
 </html>
