courses section final

--- a/index.html
+++ b/index.html
@@ -67,17 +67,65 @@
     </section>
 
     <!-- courses section -->
-     <section class="course-container">
+    <section class="course-container">
       <div class="content-desc">
-        <p>Our Courses</p>
-      <h2>Trainings We Offer</h2>
-      <p>Explore our carefully curated courses that blend academic excellence with practical skills, preparing you for success in your chosen field. We train you to upgrade your skills and practical knowledge, with the broadly designed syllabus and state-of-the-art facility. Choose among various software training programs we are offering and get the mentorship of industry experts to stand sturdy in the industry.</p>
+        <p class="oc">Our Courses</p>
+        <h2>Trainings We Offer</h2>
+        <p class="about-course">
+          Explore our carefully curated courses that blend academic excellence
+          with practical skills, preparing you for success in your chosen field.
+          We train you to upgrade your skills and practical knowledge, with the
+          broadly designed syllabus and state-of-the-art facility. Choose among
+          various software training programs we are offering and get the
+          mentorship of industry experts to stand sturdy in the industry.
+        </p>
       </div>
       <div class="course-categories">
         <p>Coding</p>
         <p>Design</p>
         <p>Digital Marketing</p>
       </div>
-     </section>
+
+      <div class="course-grid">
+        <div class="course-box">
+          <img src="images/django.png" alt="Django" /><br />Python - Django
+          Fullstack
+        </div>
+        <div class="course-box">
+          <img src="images/laravel.png" alt="Laravel" /><br />Php Laravel
+          Fullstack
+        </div>
+        <div class="course-box">
+          <img src="images/mern.png" alt="MERN" /><br />MERN Fullstack
+        </div>
+        <div class="course-box">
+          <img src="images/front-end-development.png" alt="Front End" /><br />Front End
+          Development
+        </div>
+        <div class="course-box">
+          <img src="images/flutter.png" alt="Flutter" /><br />Flutter - Mobile App
+        </div>
+        <div class="course-box">
+          <img src="images/reactjs.png" alt="React" /><br />React JS
+        </div>
+        <div class="course-box">
+          <img src="images/data-science.png" alt="Data Science" /><br />Data
+          Science
+        </div>
+        <div class="course-box">
+          <img src="images/net.png" alt=".NET" /><br />.NET
+        </div>
+        <div class="course-box">
+          <img src="images/quality-assurance.png" alt="QA" /><br />Software Testing & QA
+        </div>
+        <div class="course-box">
+          <img src="images/data_analytics.png" alt="Analytics" /><br />Data Analytics
+        </div>
+      </div>
+
+      <div class="view-more">
+        <button>View all courses</button>
+      </div>
+    </section>
   </body>
 </html>
