--- a/index.html
+++ b/index.html
@@ -122,10 +122,14 @@
           <img src="images/data_analytics.png" alt="Analytics" /><br />Data Analytics
         </div>
       </div>
-
       <div class="view-more">
         <button>View all courses</button>
       </div>
     </section>
+
+    <!-- about us section -->
+     <section class="about-us">
+      
+     </section>
   </body>
 </html>
