--- a/index.html
+++ b/index.html
@@ -99,11 +99,14 @@
           <img src="images/mern.png" alt="MERN" /><br />MERN Fullstack
         </div>
         <div class="course-box">
-          <img src="images/front-end-development.png" alt="Front End" /><br />Front End
-          Development
+          <img
+            src="images/front-end-development.png"
+            alt="Front End"
+          /><br />Front End Development
         </div>
         <div class="course-box">
-          <img src="images/flutter.png" alt="Flutter" /><br />Flutter - Mobile App
+          <img src="images/flutter.png" alt="Flutter" /><br />Flutter - Mobile
+          App
         </div>
         <div class="course-box">
           <img src="images/reactjs.png" alt="React" /><br />React JS
@@ -116,10 +119,12 @@
           <img src="images/net.png" alt=".NET" /><br />.NET
         </div>
         <div class="course-box">
-          <img src="images/quality-assurance.png" alt="QA" /><br />Software Testing & QA
+          <img src="images/quality-assurance.png" alt="QA" /><br />Software
+          Testing & QA
         </div>
         <div class="course-box">
-          <img src="images/data_analytics.png" alt="Analytics" /><br />Data Analytics
+          <img src="images/data_analytics.png" alt="Analytics" /><br />Data
+          Analytics
         </div>
       </div>
       <div class="view-more">
@@ -128,8 +133,36 @@
     </section>
 
     <!-- about us section -->
-     <section class="about-us">
-      
-     </section>
+    <section class="about-us">
+      <!-- text section -->
+      <div class="about-text">
+        <p class="ab-title">About Us</p>
+        <h2 class="ab-head">
+          Accelerate Your Career: Leading Software Training Institute In Kerala
+        </h2>
+        <p class="ab-desc">
+          Futura Labs is an IT training institute located in Kozhikode city and
+          Kochi, offering skill development services to enhance and upgrade
+          one’s skills with contemporary career trends. We have been a member of
+          Cafit- Calicut Forum for IT since its inception in 2016. Be a part of
+          FUTURA LABS, the best learning platform to transform you into a
+          skilled and trained IT professional. We are one of Kerala's most
+          trusted software training institutes, with the highest placement
+          records.
+        </p>
+        <button class="about-button">Know More <i class="fa-solid fa-circle-chevron-right"></i></button>
+      </div>
+
+      <!-- image section  -->
+      <div class="about-image">
+        <img
+          src="images/about-us.png"
+          alt="about-us-image"
+          class="about-image"
+        />
+      </div>
+
+      <!-- achievements section -->
+    </section>
   </body>
 </html>
