about page finished

--- a/index.html
+++ b/index.html
@@ -150,11 +150,13 @@
           trusted software training institutes, with the highest placement
           records.
         </p>
-        <button class="about-button">Know More <i class="fa-solid fa-circle-chevron-right"></i></button>
+        <button class="about-button">
+          Know More <i class="fa-solid fa-circle-chevron-right"></i>
+        </button>
       </div>
 
       <!-- image section  -->
-      <div class="about-image">
+      <div class="about-image-container">
         <img
           src="images/about-us.png"
           alt="about-us-image"
@@ -162,7 +164,28 @@
         />
       </div>
 
-      <!-- achievements section -->
+      <!-- stats section -->
+      <div class="stats-container">
+        <div class="stat-box">
+          <h2>1000+</h2>
+          <p>Students</p>
+        </div>
+        <div class="stat-box">
+          <h2>300+</h2>
+          <p>Placements</p>
+        </div>
+        <div class="stat-box">
+          <h2>30+</h2>
+          <p>Trainers</p>
+        </div>
+        <div class="stat-box">
+          <h2>8+</h2>
+          <p>Years of Experience</p>
+        </div>
+      </div>
     </section>
+
+    <!-- Specialities page -->
+     <section class="specialty"></section>
   </body>
 </html>
