--- a/index.html
+++ b/index.html
@@ -167,25 +167,53 @@
       <!-- stats section -->
       <div class="stats-container">
         <div class="stat-box">
-          <h2>1000+</h2>
+          <h3>1000+</h3>
           <p>Students</p>
         </div>
         <div class="stat-box">
-          <h2>300+</h2>
+          <h3>300+</h3>
           <p>Placements</p>
         </div>
         <div class="stat-box">
-          <h2>30+</h2>
+          <h3>30+</h3>
           <p>Trainers</p>
         </div>
         <div class="stat-box">
-          <h2>8+</h2>
+          <h3>8+</h3>
           <p>Years of Experience</p>
         </div>
       </div>
     </section>
 
     <!-- Specialities page -->
-     <section class="specialty"></section>
+    <section class="specialty">
+      <div class="spec-text">
+        <p class="spec-title">Why choose us</p>
+        <h2 class="spec-heading">What Makes Us Special</h2>
+        <p class="spec-description">
+          At Futura Labs, we understand that choosing the right training courses
+          can significantly impact your future success. Our commitment to
+          excellence shines through in every aspect of our programs. Whether
+          you're looking to enhance your skills, explore new passions, or
+          prepare for a competitive job market, Futura Labs provides the perfect
+          environment for growth and achievement.
+        </p>
+      </div>
+      <!-- card with images -->
+      <div class="spec-card-container">
+        <div class="spec-card">
+          <img src="images/spc_1.jpeg" alt="spec_images" />
+          <h3>Well Experienced Trainers</h3>
+        </div>
+        <div class="spec-card">
+          <img src="images/spc_2.png" alt="spec_images" />
+          <h3>More than 40+ Courses</h3>
+        </div>
+        <div class="spec-card">
+          <img src="images/spc_3.png" alt="spec_images" />
+          <h3>We are accredited by</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
