--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
       <div class="view-more">
-        <button>View all courses</button>
+        <button>View all courses&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
       </div>
     </section>
 
@@ -204,14 +204,17 @@
         <div class="spec-card">
           <img src="images/spc_1.jpeg" alt="spec_images" />
           <h3>Well Experienced Trainers</h3>
+          <p>Dedicated educators fostering a legacy of knowledge and inspiration for all.</p>
         </div>
         <div class="spec-card">
           <img src="images/spc_2.png" alt="spec_images" />
           <h3>More than 40+ Courses</h3>
+          <p>Elevate your expertise with our curated selection of courses tailored for you.</p>
         </div>
         <div class="spec-card">
           <img src="images/spc_3.png" alt="spec_images" />
           <h3>We are accredited by</h3>
+          <p>Proudly accredited, ensuring the highest standards of education and training.</p>
         </div>
       </div>
     </section>
