spec page button update

--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
           <p>Proudly accredited, ensuring the highest standards of education and training.</p>
         </div>
       </div>
+
+      <button class="spec-button">Know more&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
     </section>
   </body>
 </html>
