--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       </div>
     </header>
 
+    <!-------------->
     <!-- homepage -->
+    <!------------->
     <section class="homepage">
       <div class="main-page-content">
         <div class="head-container">
@@ -66,7 +68,9 @@
       </div>
     </section>
 
+    <!--------------------->
     <!-- courses section -->
+    <!--------------------->
     <section class="course-container">
       <div class="content-desc">
         <p class="oc">Our Courses</p>
@@ -128,11 +132,15 @@
         </div>
       </div>
       <div class="view-more">
-        <button>View all courses&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
+        <button>
+          View all courses&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+        </button>
       </div>
     </section>
 
+    <!---------------------->
     <!-- about us section -->
+    <!---------------------->
     <section class="about-us">
       <!-- text section -->
       <div class="about-text">
@@ -185,7 +193,9 @@
       </div>
     </section>
 
+    <!----------------------->
     <!-- Specialities page -->
+    <!----------------------->
     <section class="specialty">
       <div class="spec-text">
         <p class="spec-title">Why choose us</p>
@@ -204,21 +214,43 @@
         <div class="spec-card">
           <img src="images/spc_1.jpeg" alt="spec_images" />
           <h3>Well Experienced Trainers</h3>
-          <p>Dedicated educators fostering a legacy of knowledge and inspiration for all.</p>
+          <p>
+            Dedicated educators fostering a legacy of knowledge and inspiration
+            for all.
+          </p>
         </div>
         <div class="spec-card">
           <img src="images/spc_2.png" alt="spec_images" />
           <h3>More than 40+ Courses</h3>
-          <p>Elevate your expertise with our curated selection of courses tailored for you.</p>
+          <p>
+            Elevate your expertise with our curated selection of courses
+            tailored for you.
+          </p>
         </div>
         <div class="spec-card">
           <img src="images/spc_3.png" alt="spec_images" />
           <h3>We are accredited by</h3>
-          <p>Proudly accredited, ensuring the highest standards of education and training.</p>
+          <p>
+            Proudly accredited, ensuring the highest standards of education and
+            training.
+          </p>
         </div>
       </div>
 
-      <button class="spec-button">Know more&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
+      <button class="spec-button">
+        Know more&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+      </button>
+    </section>
+
+    <!------------------>
+    <!-- Process page -->
+    <!------------------>
+    <section class="process">
+      <div class="process-texts">
+        <p class="process-title">Our Process</p>
+        <h2 class="process-heading">Take Off On A Fabulous Career Journey</h2>
+        <p class="process-desc">Navigating the admissions process at our institution is a straightforward and transparent experience. Our process is more than a curriculum; it's a transformative experience crafted to elevate your skills, mindset, and career prospects. Join us at Futura Labs and embrace the journey to excellence.</p>
+      </div>
     </section>
   </body>
 </html>
