--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@
         <p class="process-title">Our Process</p>
         <h2 class="process-heading">Take Off On A Fabulous Career Journey</h2>
         <p class="process-desc">Navigating the admissions process at our institution is a straightforward and transparent experience. Our process is more than a curriculum; it's a transformative experience crafted to elevate your skills, mindset, and career prospects. Join us at Futura Labs and embrace the journey to excellence.</p>
+        <ul>
+          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Expert Training Team</li>
+          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Courses For Freshers And Professionals</li>
+          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Leading Software Training Institute n Kerala</li>
+        </ul>
       </div>
     </section>
   </body>
