--- a/index.html
+++ b/index.html
@@ -249,12 +249,31 @@
       <div class="process-texts">
         <p class="process-title">Our Process</p>
         <h2 class="process-heading">Take Off On A Fabulous Career Journey</h2>
-        <p class="process-desc">Navigating the admissions process at our institution is a straightforward and transparent experience. Our process is more than a curriculum; it's a transformative experience crafted to elevate your skills, mindset, and career prospects. Join us at Futura Labs and embrace the journey to excellence.</p>
-        <ul>
-          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Expert Training Team</li>
-          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Courses For Freshers And Professionals</li>
-          <li><i class="fa-solid fa-paper-plane"></i>&nbsp;Leading Software Training Institute n Kerala</li>
+        <p class="process-desc">
+          Navigating the admissions process at our institution is a
+          straightforward and transparent experience. Our process is more than a
+          curriculum; it's a transformative experience crafted to elevate your
+          skills, mindset, and career prospects. Join us at Futura Labs and
+          embrace the journey to excellence.
+        </p>
+        <ul class="process-list">
+          <li>
+            <i class="fa-solid fa-paper-plane"></i>&nbsp;&nbsp;Expert Training
+            Team
+          </li>
+          <li>
+            <i class="fa-solid fa-paper-plane"></i>&nbsp;&nbsp;Courses For
+            Freshers And Professionals
+          </li>
+          <li>
+            <i class="fa-solid fa-paper-plane"></i>&nbsp;&nbsp;Leading Software
+            Training Institute n Kerala
+          </li>
         </ul>
+      </div>
+      <div class="process-illustration">
+        <h3>01</h3>
+        <p>Understanding & Creating a Customised Training Plan for each student</p>
       </div>
     </section>
   </body>
