--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!--------------------->
     <section class="course-container">
       <div class="content-desc">
-        <p class="oc">Our Courses</p>
+        <h4 class="oc">Our Courses</h4>
         <h2>Trainings We Offer</h2>
         <p class="about-course">
           Explore our carefully curated courses that blend academic excellence
@@ -92,43 +92,61 @@
 
       <div class="course-grid">
         <div class="course-box">
-          <img src="images/django.png" alt="Django" /><br />Python - Django
-          Fullstack
+          <img
+            loading="lazy"
+            src="images/django.png"
+            alt="Django"
+          /><br />Python - Django Fullstack
         </div>
         <div class="course-box">
-          <img src="images/laravel.png" alt="Laravel" /><br />Php Laravel
-          Fullstack
+          <img loading="lazy" src="images/laravel.png" alt="Laravel" /><br />Php
+          Laravel Fullstack
         </div>
         <div class="course-box">
-          <img src="images/mern.png" alt="MERN" /><br />MERN Fullstack
+          <img loading="lazy" src="images/mern.png" alt="MERN" /><br />MERN
+          Fullstack
         </div>
         <div class="course-box">
           <img
+            loading="lazy"
             src="images/front-end-development.png"
             alt="Front End"
           /><br />Front End Development
         </div>
         <div class="course-box">
-          <img src="images/flutter.png" alt="Flutter" /><br />Flutter - Mobile
-          App
+          <img
+            loading="lazy"
+            src="images/flutter.png"
+            alt="Flutter"
+          /><br />Flutter - Mobile App
         </div>
         <div class="course-box">
-          <img src="images/reactjs.png" alt="React" /><br />React JS
+          <img loading="lazy" src="images/reactjs.png" alt="React" /><br />React
+          JS
         </div>
         <div class="course-box">
-          <img src="images/data-science.png" alt="Data Science" /><br />Data
-          Science
+          <img
+            loading="lazy"
+            src="images/data-science.png"
+            alt="Data Science"
+          /><br />Data Science
         </div>
         <div class="course-box">
-          <img src="images/net.png" alt=".NET" /><br />.NET
+          <img loading="lazy" src="images/net.png" alt=".NET" /><br />.NET
         </div>
         <div class="course-box">
-          <img src="images/quality-assurance.png" alt="QA" /><br />Software
-          Testing & QA
+          <img
+            loading="lazy"
+            src="images/quality-assurance.png"
+            alt="QA"
+          /><br />Software Testing & QA
         </div>
         <div class="course-box">
-          <img src="images/data_analytics.png" alt="Analytics" /><br />Data
-          Analytics
+          <img
+            loading="lazy"
+            src="images/data_analytics.png"
+            alt="Analytics"
+          /><br />Data Analytics
         </div>
       </div>
       <div class="view-more">
@@ -144,7 +162,7 @@
     <section class="about-us">
       <!-- text section -->
       <div class="about-text">
-        <p class="ab-title">About Us</p>
+        <h4 class="ab-title">About Us</h4>
         <h2 class="ab-head">
           Accelerate Your Career: Leading Software Training Institute In Kerala
         </h2>
@@ -198,7 +216,7 @@
     <!----------------------->
     <section class="specialty">
       <div class="spec-text">
-        <p class="spec-title">Why choose us</p>
+        <h4 class="spec-title">Why choose us</h4>
         <h2 class="spec-heading">What Makes Us Special</h2>
         <p class="spec-description">
           At Futura Labs, we understand that choosing the right training courses
@@ -212,7 +230,7 @@
       <!-- card with images -->
       <div class="spec-card-container">
         <div class="spec-card">
-          <img src="images/spc_1.jpeg" alt="spec_images" />
+          <img loading="lazy" src="images/spc_1.jpeg" alt="spec_images" />
           <h3>Well Experienced Trainers</h3>
           <p>
             Dedicated educators fostering a legacy of knowledge and inspiration
@@ -220,7 +238,7 @@
           </p>
         </div>
         <div class="spec-card">
-          <img src="images/spc_2.png" alt="spec_images" />
+          <img loading="lazy" src="images/spc_2.png" alt="spec_images" />
           <h3>More than 40+ Courses</h3>
           <p>
             Elevate your expertise with our curated selection of courses
@@ -228,7 +246,7 @@
           </p>
         </div>
         <div class="spec-card">
-          <img src="images/spc_3.png" alt="spec_images" />
+          <img loading="lazy" src="images/spc_3.png" alt="spec_images" />
           <h3>We are accredited by</h3>
           <p>
             Proudly accredited, ensuring the highest standards of education and
@@ -247,7 +265,7 @@
     <!------------------>
     <section class="process">
       <div class="process-texts">
-        <p class="process-title">Our Process</p>
+        <h4 class="process-title">Our Process</h4>
         <h2 class="process-heading">Take Off On A Fabulous Career Journey</h2>
         <p class="process-desc">
           Navigating the admissions process at our institution is a
@@ -271,10 +289,83 @@
           </li>
         </ul>
       </div>
-      <div class="process-illustration">
-        <h3>01</h3>
-        <p>Understanding & Creating a Customised Training Plan for each student</p>
+    </section>
+
+    <!------------------------>
+    <!-- Placements section -->
+    <!------------------------>
+    <section class="placements">
+      <div class="placement-details">
+        <h4 class="placement-title">Placements</h4>
+        <h2 class="placement-heading">Our Students Are Placed At</h2>
+        <p class="placement-desc">
+          Futura Labs has marked it excellence and has provided over 300+ job
+          placements to its students to kick start their careers with top-notch
+          MNCs and SMEs. Learn and enhance your skills with us and get placed as
+          a professional and trained software developer/programmer in the IT
+          industry to live the dream career you have wished for.
+        </p>
       </div>
+      <!-- companies section -->
+      <div class="placement-companies">
+        <div class="company-card">
+          <img src="images/companies/1.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/2.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/3.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/4.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/5.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/6.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/7.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/8.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/9.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/10.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/11.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/12.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/13.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/14.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/15.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/16.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/17.png" alt="company" />
+        </div>
+        <div class="company-card">
+          <img src="images/companies/18.png" alt="company" />
+        </div>
+      </div>
+      <button class="placement-button">
+        Know More <i class="fa-solid fa-circle-chevron-right"></i>
+      </button>
     </section>
   </body>
 </html>
