placement part 2 rough version

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       src="https://kit.fontawesome.com/c61501f624.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="script.js"></script>
     <title>Futura Labs</title>
   </head>
   <body>
@@ -366,6 +367,62 @@
       <button class="placement-button">
         Know More <i class="fa-solid fa-circle-chevron-right"></i>
       </button>
+    </section>
+
+    <!--------------------->
+    <!-- Placement pt. 2 -->
+    <!--------------------->
+    <section class="placement2">
+      <div class="plc2-text">
+        <h4 class="plc2-title">Placements</h4>
+        <h2 class="plc2-heading">Get Placed in Ambitious Careers</h2>
+        <p class="plc2-desc">
+          Meet the Futura Labs alumni - a league of innovators, creators, and
+          leaders. Our placed students are the driving force behind the
+          real-world impact, putting theory into practice. Join our
+          distinguished ranks and shape the future with Futura Labs. Your
+          success story starts here.
+        </p>
+      </div>
+      <!-- placement gallery -->
+      <div class="carousel-container">
+        <div class="carousel">
+          <div class="card">
+            <img src="plc/1.png" alt="Malin M" />
+            <div class="info">
+              <h3>MALIN M</h3>
+              <p class="role">DATA ANALYST</p>
+              <p class="company">Interval Learning</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="plc/2.png" alt="Deepak Roshan" />
+            <div class="info">
+              <h3>DEEPAK ROSHAN</h3>
+              <p class="role">Video Editor</p>
+              <p class="company">Samvedha Consultants Pvt. Ltd</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="plc/3.png" alt="Athirek Rajeevan" />
+            <div class="info">
+              <h3>ATHIREK RAJEEVAN</h3>
+              <p class="role">Flutter Developer</p>
+              <p class="company">Offerwave LLP</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="plc/4.png" alt="Hiba" />
+            <div class="info">
+              <h3>HIBA</h3>
+              <p class="role">UI/UX Designer</p>
+              <p class="company">Corpus Data Hub</p>
+            </div>
+          </div>
+        </div>
+        <button class="prev">&#8592;</button>
+        <button class="next">&#8594;</button>
+      </div>
     </section>
   </body>
 </html>
