carousel effect rough

--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
             </div>
           </div>
         </div>
-        <button class="prev">&#8592;</button>
-        <button class="next">&#8594;</button>
+        <button class="prev"><i class="fa-solid fa-circle-left"></i></button>
+        <button class="next"><i class="fa-solid fa-circle-right"></i></button>
       </div>
     </section>
   </body>
