placement section 2 final version

--- a/index.html
+++ b/index.html
@@ -374,16 +374,21 @@
     <!--------------------->
     <section class="placement2">
       <div class="plc2-text">
-        <h4 class="plc2-title">Placements</h4>
-        <h2 class="plc2-heading">Get Placed in Ambitious Careers</h2>
-        <p class="plc2-desc">
-          Meet the Futura Labs alumni - a league of innovators, creators, and
-          leaders. Our placed students are the driving force behind the
-          real-world impact, putting theory into practice. Join our
-          distinguished ranks and shape the future with Futura Labs. Your
-          success story starts here.
-        </p>
+        <div class="plc2-head-items">
+          <h4 class="plc2-title">Placements</h4>
+          <h2 class="plc2-heading">Get Placed in Ambitious Careers</h2>
+        </div>
+        <div class="plc2desc-cn">
+          <p class="plc2-desc">
+            Meet the Futura Labs alumni - a league of innovators, creators, and
+            leaders. Our placed students are the driving force behind the
+            real-world impact, putting theory into practice. Join our
+            distinguished ranks and shape the future with Futura Labs. Your
+            success story starts here.
+          </p>
+        </div>
       </div>
+
       <!-- placement gallery -->
       <div class="carousel-container">
         <div class="carousel">
@@ -419,10 +424,30 @@
               <p class="company">Corpus Data Hub</p>
             </div>
           </div>
+          <div class="card">
+            <img src="plc/5.png" alt="Anoop" />
+            <div class="info">
+              <h3>ANOOP JOY</h3>
+              <p class="role">UI/UX Designer</p>
+              <p class="company">Brandspectra International Pvt.Ltd</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="plc/6.png" alt="Rajath" />
+            <div class="info">
+              <h3>RAJATH CV</h3>
+              <p class="role">UI/UX Designer</p>
+              <p class="company">Axorbit Technologies Pvt.Ltd</p>
+            </div>
+          </div>
         </div>
         <button class="prev"><i class="fa-solid fa-circle-left"></i></button>
         <button class="next"><i class="fa-solid fa-circle-right"></i></button>
       </div>
+
+      <button class="plc2-button">
+        View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+      </button>
     </section>
   </body>
 </html>
