placement 2 section final draft

--- a/index.html
+++ b/index.html
@@ -449,5 +449,17 @@
         View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
       </button>
     </section>
+
+    <!-------------------------->
+    <!-- Join Course section --->
+    <!-------------------------->
+    <section class="join-course">
+      <div class="course-card">
+        <h2>Interested In Joining Our Course</h2>
+        <p>Get the expert's opinion and help throughout your journey.</p>
+        <button class="join-course-button">Contact us now&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
+        <img src="images/join.png" alt="Man Image">
+      </div>
+    </section>
   </body>
 </html>
