Join course section v1

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <h2>Interested In Joining Our Course</h2>
         <p>Get the expert's opinion and help throughout your journey.</p>
         <button class="join-course-button">Contact us now&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
-        <img src="images/join.png" alt="Man Image">
+        <img src="images/join.png" alt="Man Image" class="course-join-image">
       </div>
     </section>
   </body>
