--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
     <!-------------------------->
     <section class="join-course">
       <div class="course-card">
-        <h2>Interested In Joining Our Course</h2>
-        <p>Get the expert's opinion and help throughout your journey.</p>
+        <h2 class="course-card-head">Interested In Joining Our Course</h2>
+        <p class="course-card-desc">Get the expert's opinion and help throughout your journey.</p>
         <button class="join-course-button">Contact us now&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
         <img src="images/join.png" alt="Man Image" class="course-join-image">
       </div>
